--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
         <span>L</span>
         <span>O</span>
     </div>
+
+<div class="greetings">
+    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>a</span>
+        <span>g</span>
+        <span>e</span>
+        <span>t</span>
+        <span>q</span>
+    </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>I Have A Gift For You!!!</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Klik Ini</a>
         </button>
         
     </div>
