--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
+        <span>W</span>
     </div>
 
 <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>a</span>
-        <span>g</span>
-        <span>e</span>
-        <span>t</span>
-        <span>q</span>
+        <span>A</span>
+        <span>G</span>
+        <span>E</span>
+        <span>T</span>
+        <span>A</span>
     </div>
     <div class="description">
+        <span>The Pretties Girl Ever, This</span>
         <span>I Have A Gift For You!!!</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik Ini</a>
+            <a href="flower.html">Klik Ini Yahh</a>
         </button>
         
     </div>
