--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>Hadiahh</title>
 </head>
 <body>
     <div class="greetings">
@@ -33,7 +33,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik Ini Yahh</a>
+            <a href="hadiah.html">Klik Ini Yahh</a>
         </button>
         
     </div>
