--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Hadiahh</title>
+    <title>maaf lama</title>
 </head>
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>W</span>
+        <span>e</span>
+        <span>h</span>
+        <span>e</span>
+        <span>h</span>
+        <span>e</span>
     </div>
 
 <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>A</span>
-        <span>G</span>
-        <span>E</span>
-        <span>T</span>
-        <span>A</span>
+        <span>h</span>
+        <span>w</span>
+        <span>h</span>
+        <span>w</span>
+        <span>e</span>
     </div>
     <div class="description">
-        <span>The Pretties Girl Ever, This</span>
-        <span>I Have A Gift For You!!!</span>
+        <span>Akhirnya inget password akun</span>
+        <span>Contohnya kaya gini</span>
     </div>
     <div class="button">
         <button>
-            <a href="hadiah.html">Klik Ini Yahh</a>
+            <a href="hadiah.html">Klik</a>
         </button>
         
     </div>
