--- a/index.html
+++ b/index.html
@@ -11,29 +11,25 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
-        <span>e</span>
-        <span>h</span>
-        <span>e</span>
-        <span>h</span>
-        <span>e</span>
+        <span>m</span>
+        <span>a</span>
+        <span>a</span>
+        <span>f</span>
     </div>
 
 <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>h</span>
-        <span>w</span>
-        <span>h</span>
-        <span>w</span>
-        <span>e</span>
+        <span>l</span>
+        <span>a</span>
+        <span>m</span>
+        <span>a</span>
     </div>
     <div class="description">
-        <span>Akhirnya inget password akun</span>
-        <span>Contohnya kaya gini</span>
+        <span>baru keinget password akun </span>
     </div>
     <div class="button">
         <button>
-            <a href="hadiah.html">Klik</a>
+            <a href="hadiah.html">Klik tombol ni</a>
         </button>
         
     </div>
