--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>maaf lama</title>
+    <title>huft</title>
 </head>
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>m</span>
-        <span>a</span>
-        <span>a</span>
-        <span>f</span>
+        <span>l</span>
+        <span>o</span>
+        <span>v</span>
+        <span>e</span>
     </div>
 
 <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>l</span>
-        <span>a</span>
-        <span>m</span>
-        <span>a</span>
+        <span>y</span>
+        <span>o</span>
+        <span>u</span>
+        <span>!</span>
     </div>
     <div class="description">
-        <span>baru keinget password akun </span>
+        <span>my love mine all mine, sayang kamu banyak banyak</span>
     </div>
     <div class="button">
         <button>
-            <a href="hadiah.html">Klik tombol ni</a>
+            <a href="hadiah.html">semoga mood kamu baikann</a>
         </button>
         
     </div>
