--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>my love mine all mine, sayang kamu banyak banyak</span>
+        <span>my love mine all mine</span>
+        <span>sayang kamu banyak banyakk</span>
     </div>
     <div class="button">
         <button>
