--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </div>
     <div class="description">
         <span>my love mine all mine</span>
+    <div class="description">
         <span>sayang kamu banyak banyakk</span>
-    </div>
     <div class="button">
         <button>
             <a href="hadiah.html">semoga mood kamu baikann</a>
