--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span>sayang kamu banyak banyakk</span>
     <div class="button">
         <button>
-            <a href="hadiah.html">semoga mood kamu baikann</a>
+            <a href="hadiah.html">ayoo tekann</a>
         </button>
         
     </div>
